@@ -1,5 +1,6 @@
 = ActiveMerchant CHANGELOG
 
+* Update TrustCommerce docs now that the gateway falls back to SSL post when tclink isn't available [cody]
 * Change ARB to use correct :address1 key for addresses [cody]
 * No need for specialized recurring response for Authorize.net recurring billing [cody]
 * Update TransFirst to support avs and cvv data. Remove test_result_from_cc_number. [cody]
